--- a/index.html
+++ b/index.html
@@ -84,13 +84,21 @@
           <h2>CompLing Seminar</h2>
           <div class="event-date">June 23-26, 2025</div>
           <div class="slide-line compling-line"></div>
-          <p>International Seminar Computational Linguistics (CompLing-2025) 
+          <div>
+            <p>International Seminar Computational Linguistics (CompLing-2025) 
             is focused on discussing cutting-edge research and applied developments in the fields of computational modeling 
             and natural language processing, information retrieval, automated knowledge extraction from text corpora, 
-            and speech technologies. A key task of the seminar is the integration of scientific approaches 
-            in computational linguistics with machine learning techniques and neural network models. 
-            Thus, the seminar serves as a platform for interaction among computational linguists,
+            and speech technologies. </p>
+            <p>A key task of the seminar is the integration of scientific approaches 
+            in computational linguistics with machine learning techniques and neural network models. </p> <br />
+            <p>Thus, the seminar serves as a platform for interaction among computational linguists,
             AI researchers, and NLP industrial projects, stimulating interdisciplinary exchange of knowledge and innovations.</p>
+           </div>
+           <div id="connected-graph"></div>
+
+
+
+          
         </div>
         <div class="landing-slideshow__slide" data-color-class="zakharov">
           <h2>Zakharov.day</h2>
@@ -245,8 +253,13 @@
   </section>
 </main>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdn.jsdelivr.net/jquery.slick/latest/slick.min.js'></script><script  src="./script.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/d3-cloud"></script>
+<script src="https://d3js.org/d3.v6.min.js"></script>
+
+
 
 </body>
 </html>
