--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h2>CompLing Seminar</h2>
           <div class="event-date">June 23-26, 2025</div>
           <div class="slide-line compling-line"></div>
-          <div>
+          <div class="text-zone">
             <p>International Seminar Computational Linguistics (CompLing-2025) 
             is focused on discussing cutting-edge research and applied developments in the fields of computational modeling 
             and natural language processing, information retrieval, automated knowledge extraction from text corpora, 
