--- a/index.html
+++ b/index.html
@@ -236,8 +236,12 @@
       <div class="product-info">
         <h2 class="product-info__title">Mission of the Seminar</h2>
         <div class="product-info__copy">
-          Bridging the worlds of computational linguistics, corpus linguistics, and modern AI methods like machine learning and NLP, the seminar fosters innovation, collaboration, and a deeper understanding of language and algorithms working together.
-        </div>
+             Bridging the worlds of computational linguistics, corpus linguistics, 
+          and modern AI methods like machine learning and NLP, the seminar fosters innovation, 
+          collaboration, and a deeper understanding of language and algorithms working together. 
+          The main gathering takes place in June, complemented by three key meetups throughout the year: 
+          on large language models, text mining, and Zakharov Day. 
+          Our target audience includes linguists, data scientists, and industry professionals working with language processing and understanding technologies.        </div>
         <div class="product-info__cta">
           <a href="#0" class="button--alternate">Register for the Next Event</a>
         </div>
