--- a/index.html
+++ b/index.html
@@ -248,12 +248,35 @@
         </div>
       </div>
       <!-- /.product-info -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" class="product-photo__placeholder">
-        <rect x="0" y="0" width="100%" height="100%" fill="#cccccc" />
-        <text x="50%" y="50%" text-anchor="middle" fill="#666666" font-size="14" font-family="Arial" dy=".3em">
-          Image Placeholder
-        </text>
-      </svg>
+      <section class="upper-landing">
+    <div class="upper-landing__info">
+      <header class="upper-landing__header">
+        <h2 style="text-align: center; color: #7bff00;">Zakharov.Day</h2>
+        <p style="text-align: center;">The meetup will kick off with two keynote presentations: Speaker X will delve into... and Speaker Y will explore... Additional 3-minute lightning talks featuring early-stage research are welcome!</p>
+      </header>
+    </div>
+
+    <div class="timeline">
+      <div class="timeline-event">
+        <div class="timeline-content">
+          <div class="timeline-date">February 20</div>
+          Registration opens for both attendees and presenters.
+        </div>
+      </div>
+      <div class="timeline-event">
+        <div class="timeline-content">
+          <div class="timeline-date">March 3</div>
+          Notification of acceptance or rejection for submitted talks.
+        </div>
+      </div>
+      <div class="timeline-event">
+        <div class="timeline-content">
+          <div class="timeline-date">March 13</div>
+          The main meetup event.
+        </div>
+      </div>
+    </div>
+  </section>
       
       <style>
         .product-photo__placeholder {
