--- a/index.html
+++ b/index.html
@@ -249,29 +249,32 @@
       </div>
       <!-- /.product-info -->
       <section class="upper-landing">
-    <div class="upper-landing__info">
-      <header class="upper-landing__header">
-        <h2 style="text-align: center; color: #7bff00;">Zakharov.Day</h2>
-        <p style="text-align: center;">The meetup will kick off with two keynote presentations: Speaker X will delve into... and Speaker Y will explore... Additional 3-minute lightning talks featuring early-stage research are welcome!</p>
-      </header>
+    <div class="product-info__copy">
+      Bridging the worlds of computational linguistics, corpus linguistics, 
+      and modern AI methods like machine learning and NLP, the seminar fosters innovation, 
+      collaboration, and a deeper understanding of language and algorithms working together. 
+      <br />
+      The main gathering takes place in June, complemented by three key meetups throughout the year: 
+      on large language models, text mining, and Zakharov Day. 
+      Our target audience includes linguists, data scientists, and industry professionals working with language processing and understanding technologies.
     </div>
 
     <div class="timeline">
       <div class="timeline-event">
-        <div class="timeline-content">
-          <div class="timeline-date">February 20</div>
+        <span class="event-date">February 20</span>
+        <div class="event-content">
           Registration opens for both attendees and presenters.
         </div>
       </div>
       <div class="timeline-event">
-        <div class="timeline-content">
-          <div class="timeline-date">March 3</div>
+        <span class="event-date">March 3</span>
+        <div class="event-content">
           Notification of acceptance or rejection for submitted talks.
         </div>
       </div>
       <div class="timeline-event">
-        <div class="timeline-content">
-          <div class="timeline-date">March 13</div>
+        <span class="event-date">March 13</span>
+        <div class="event-content">
           The main meetup event.
         </div>
       </div>
