--- a/index.html
+++ b/index.html
@@ -248,38 +248,29 @@
         </div>
       </div>
       <!-- /.product-info -->
-      <section class="upper-landing">
-    <div class="product-info__copy">
-      Bridging the worlds of computational linguistics, corpus linguistics, 
-      and modern AI methods like machine learning and NLP, the seminar fosters innovation, 
-      collaboration, and a deeper understanding of language and algorithms working together. 
-      <br />
-      The main gathering takes place in June, complemented by three key meetups throughout the year: 
-      on large language models, text mining, and Zakharov Day. 
-      Our target audience includes linguists, data scientists, and industry professionals working with language processing and understanding technologies.
+      <div class="timeline">
+    <div class="timeline-event">
+      <div class="timeline-content">
+        <div class="timeline-date">February 20</div>
+        Registration opens for both attendees and presenters.
+      </div>
     </div>
+    <div class="timeline-event">
+      <div class="timeline-content">
+        <div class="timeline-date">March 3</div>
+        Notification of acceptance or rejection for submitted talks.
+      </div>
+    </div>
+    <div class="timeline-event">
+      <div class="timeline-content">
+        <div class="timeline-date">March 13</div>
+        The main meetup event.
+      </div>
+    </div>
+  </div>
 
-    <div class="timeline">
-      <div class="timeline-event">
-        <span class="event-date">February 20</span>
-        <div class="event-content">
-          Registration opens for both attendees and presenters.
-        </div>
-      </div>
-      <div class="timeline-event">
-        <span class="event-date">March 3</span>
-        <div class="event-content">
-          Notification of acceptance or rejection for submitted talks.
-        </div>
-      </div>
-      <div class="timeline-event">
-        <span class="event-date">March 13</span>
-        <div class="event-content">
-          The main meetup event.
-        </div>
-      </div>
-    </div>
-  </section>
+
+      
       
       <style>
         .product-photo__placeholder {
