--- a/index.html
+++ b/index.html
@@ -249,25 +249,27 @@
       </div>
       <!-- /.product-info -->
       <div class="timeline">
-    <div class="timeline-event">
-      <div class="timeline-content">
-        <div class="timeline-date">February 20</div>
-        Registration opens for both attendees and presenters.
-      </div>
-    </div>
-    <div class="timeline-event">
-      <div class="timeline-content">
-        <div class="timeline-date">March 3</div>
-        Notification of acceptance or rejection for submitted talks.
-      </div>
-    </div>
-    <div class="timeline-event">
-      <div class="timeline-content">
-        <div class="timeline-date">March 13</div>
-        The main meetup event.
-      </div>
+        <h1>Zakharov.Day</h1>
+        <p class="subtitle">Join us for a dynamic meetup featuring keynote presentations, lightning talks, and innovative discussions on language technologies.</p>
+        <div class="timeline-event">
+    <div class="timeline-content">
+      <div class="timeline-date">February 20</div>
+      Registration opens for both attendees and presenters.
     </div>
   </div>
+  <div class="timeline-event">
+    <div class="timeline-content">
+      <div class="timeline-date">March 3</div>
+      Notification of acceptance or rejection for submitted talks.
+    </div>
+  </div>
+  <div class="timeline-event">
+    <div class="timeline-content">
+      <div class="timeline-date">March 13</div>
+      The main meetup event.
+    </div>
+  </div>
+      </div>
 
 
       
