--- a/index.html
+++ b/index.html
@@ -249,27 +249,34 @@
       </div>
       <!-- /.product-info -->
       <div class="timeline">
-        <h1>Zakharov.Day</h1>
-        <p class="subtitle">Join us for a dynamic meetup featuring keynote presentations, lightning talks, and innovative discussions on language technologies.</p>
-        <div class="timeline-event">
+  <h1 class="timeline-title">Zakharov.Day</h1>
+  <p class="timeline-subtitle">
+    The meetup will kick off with two keynote presentations: Speaker X will delve into... and Speaker Y will explore... 
+    Additional 3-minute lightning talks featuring early-stage research are welcome!
+  </p>
+  <div class="timeline-event">
+    <div class="timeline-point"></div>
     <div class="timeline-content">
       <div class="timeline-date">February 20</div>
-      Registration opens for both attendees and presenters.
+      <p>Registration opens for both attendees and presenters.</p>
     </div>
   </div>
   <div class="timeline-event">
+    <div class="timeline-point"></div>
     <div class="timeline-content">
       <div class="timeline-date">March 3</div>
-      Notification of acceptance or rejection for submitted talks.
+      <p>Notification of acceptance or rejection for submitted talks.</p>
     </div>
   </div>
   <div class="timeline-event">
+    <div class="timeline-point"></div>
     <div class="timeline-content">
       <div class="timeline-date">March 13</div>
-      The main meetup event.
+      <p>The main meetup event.</p>
     </div>
   </div>
-      </div>
+</div>
+
 
 
       
