--- a/index.html
+++ b/index.html
@@ -258,21 +258,21 @@
     <div class="timeline-point"></div>
     <div class="timeline-content">
       <div class="timeline-date">February 20</div>
-      <p>Registration opens for both attendees and presenters.</p>
+      <p>registration opens for both attendees and presenters.</p>
     </div>
   </div>
   <div class="timeline-event">
     <div class="timeline-point"></div>
     <div class="timeline-content">
       <div class="timeline-date">March 3</div>
-      <p>Notification of acceptance or rejection for submitted talks.</p>
+      <p>notification of acceptance or rejection for submitted talks.</p>
     </div>
   </div>
   <div class="timeline-event">
     <div class="timeline-point"></div>
     <div class="timeline-content">
       <div class="timeline-date">March 13</div>
-      <p>The main meetup event.</p>
+      <p>the main meetup event.</p>
     </div>
   </div>
 </div>
