--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
     The meetup will kick off with two keynote presentations: Speaker X will delve into... and Speaker Y will explore... 
     Additional 3-minute lightning talks featuring early-stage research are welcome!
   </p>
+  <div class="timeline-line"></div>
   <div class="timeline-event">
     <div class="timeline-point"></div>
     <div class="timeline-content">
@@ -276,6 +277,7 @@
     </div>
   </div>
 </div>
+
 
 
 
