--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
           <h2>Zakharov.day</h2>
           <div class="event-date">March 13, 2025</div>
           <div class="slide-line zakharov-line"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <p>A meetup dedicated to the issues of automatic text processing, the creation and application of corpus resources, 
+            and continuing the research traditions established by the founder of the St. Petersburg School of Corpus Linguistics, V.P. Zakharov.
             </p>
         </div>
 
