--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="slide-line compling-line"></div>
           <div class="content">
             <div class="text-zone">
-            <p>The CompLing-2025 seminar explores cutting-edge research in computational linguistics, 
+            <p>CompLing-2025 seminar explores cutting-edge research in computational linguistics, 
               NLP, and AI, fostering collaboration between researchers and industry to drive innovation and interdisciplinary exchange.</p>
            </div>
            <div id="connected-graph"></div>
@@ -97,7 +97,7 @@
           <h2>Zakharov.day</h2>
           <div class="event-date">March 13, 2025</div>
           <div class="slide-line zakharov-line"></div>
-          <p>A meetup dedicated to the issues of automatic text processing, the creation and application of corpus resources, 
+          <p>The meetup dedicated to the issues of automatic text processing, the creation and application of corpus resources, 
             and continuing the research traditions established by the founder of the St. Petersburg School of Corpus Linguistics, V.P. Zakharov.
             </p>
         </div>
