--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!--меню хедера-->
     <section class="site-header__actions">
       <nav class="site-nav">
-        <a href="#0" class="site-nav__item"><span>Important Dates</span></a>
-        <a href="#0" class="site-nav__item"><span>Our Journals</span></a>
-        <a href="#inf" class="site-nav__item active"><span>About Events</span></a>
+        <a href="#dates" class="site-nav__item"><span>Important Dates</span></a>
+        <a href="#prints" class="site-nav__item"><span>Our Journals</span></a>
+        <a href="#contact" class="site-nav__item active"><span>Contact us</span></a>
       </nav>
     </section>
     <!--конец меню хедера-->
@@ -160,7 +160,7 @@
   </section>
 
 
-  <section class="mid-landing" id="inf">
+  <section class="mid-landing">
     <div class="container">
       <div class="mid-landing__cta-row">
           <section class="learn-more-card">
@@ -233,7 +233,7 @@
       <!-- /__cta-row -->
     </div>
     <!-- /.container -->
-    <div class="mid-landing__product-row">
+    <div class="mid-landing__product-row" id="dates">
       <div class="product-info">
         <h2 class="product-info__title">Mission of the Seminar</h2>
         <div class="product-info__copy">
@@ -296,7 +296,7 @@
     
     <!-- /__product-row -->
   </section>
-  <section class="lower-landing">
+  <section class="lower-landing" id="contact">
     <div class="overlay">
         <div class="container">
             <div class="overlay__content">
