--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         </h2>
       </header>
       <div class="upper-landing__copy">
-        Explore Cutting-Edge Research and Innovations in the Field of Language Technology
+        Explore Cutting-Edge Research and Innovations
+        <p>in the Field of Language Technology
       </div>
      
       <div class="upper-landing__cta">
