--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
               These lightning talks are a great platform for sharing:
             </p>
             <ul class="custom-list">
-              <li>Initial Findings: Early results and data from ongoing research.</li>
-              <li>Experimental Overviews: Insights into the design and methodology of experiments.</li>
-              <li>Hypothesis Presentations: Theoretical frameworks and hypotheses being tested.</li>
-              <li>Innovative Concepts: New ideas and approaches in the field of linguistics and AI.</li>
+              <li><b>Initial Findings</b>: Early results and data from ongoing research.</li>
+              <li><b>Experimental Overviews</b>: Insights into the design and methodology of experiments.</li>
+              <li><b>Hypothesis Presentations</b>: Theoretical frameworks and hypotheses being tested.</li>
+              <li><b>Innovative Concepts</b>: New ideas and approaches in the field of linguistics and AI.</li>
             </ul>
             
             <p>
@@ -269,21 +269,21 @@
           <div class="timeline-point"></div>
           <div class="timeline-content">
             <div class="timeline-date">February 20</div>
-            <p>registration opens for both attendees and presenters.</p>
+            <p>registration opens for both attendees and presenters</p>
           </div>
         </div>
         <div class="timeline-event">
           <div class="timeline-point"></div>
           <div class="timeline-content">
             <div class="timeline-date">March 3</div>
-            <p>notification of acceptance or rejection for submitted talks.</p>
+            <p>notification of acceptance or rejection for submitted talks</p>
           </div>
         </div>
         <div class="timeline-event">
           <div class="timeline-point"></div>
           <div class="timeline-content">
             <div class="timeline-date">March 13</div>
-            <p>the main meetup event.</p>
+            <p>the main meetup event</p>
           </div>
         </div>
       
