--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="lower-landing__copy">
                     Have questions or need more information about the seminar? Reach out to us using the form below, and we’ll get back to you shortly.
                 </div>
-                <form class="lower-landing__form">
+                <form class="lower-landing__form" id="contact-form" action="https://formspree.io/f/xkgopnqn" method="POST" onsubmit="submitForm(event)">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="name" placeholder="Enter your name" required>
@@ -332,7 +332,16 @@
                         <button type="submit" class="button--white">Submit</button>
                     </div>
                 </form>
+                <div class="popup hidden" id="popup-success" style="display:none;">
+                  <div class="popup-content">
+                    
+                    <h2>Your message has been sent!</h2>
+                    <p>Thank you for your message. We will get back to you shortly.</p>
+                  </div>
+                </div>
+
             </div>
+
             <!-- /.overlay-content -->
         </div>
     </div>
