--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
       <div class="timeline">
         <h1 class="timeline-title">Zakharov.Day</h1>
         <p class="timeline-subtitle">
-            The meetup will kick off with two keynote presentations. 
-            Additionally, we invite you to submit proposals for 3-minute lightning talks focused on early-stage research.
+          The meetup will take place on <b>March 13, 2025</b>, and kick off with two keynote presentations. 
+          Additionally, we invite you to submit proposals for 3-minute lightning talks focused on early-stage research.
         </p>
         <div class="timeline-details">
             <p>
