--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           collaboration, and a deeper understanding of language and algorithms working together. 
           <br />
           The main gathering takes place in <b>June</b>, complemented by three key meetups throughout the year: 
-          on large language models, text mining, and Zakharov Day. 
+          on large language models (<b>December</b>), text mining (<b>September</b>), and Zakharov Day (<b>March</b>). 
           <br />
           Our target audience includes linguists, data scientists, and industry professionals working with language processing and understanding technologies.        </div>
         <div class="product-info__cta">
