--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
           <div class="slideshow-dots"></div>
           <div class="slideshow-arrows">
             <div class="slideshow-arrows__prev" id="ul-prev">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/6791/braun-left-arrow.png" alt="Previous Slide">
+              <img src="./braun-left-arrow.png" alt="Previous Slide">
             </div>
             <div class="slideshow-arrows__next" id="ul-next">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/6791/braun-right-arrow.png" alt="Next Slide">
+              <img src="./braun-right-arrow.png" alt="Next Slide">
             </div>
           </div>
         </div>
