--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
           and modern AI methods like machine learning and NLP, the seminar fosters innovation, 
           collaboration, and a deeper understanding of language and algorithms working together. 
           <br />
-          The main gathering takes place in <b>June</b>, complemented by three key meetups throughout the year: 
+          The main gathering takes place in <b>June</b> within the framework of the international conference <a href="https://ims.itmo.ru/eng/" target="_blank">Internet and Modern Society (IMS–2025)</a>, St. Petersburg, Russia,
+          complemented by three key meetups throughout the year: 
           on large language models (<b>December</b>), text mining (<b>September</b>), and Zakharov Day (<b>March</b>). 
           <br />
           Our target audience includes linguists, data scientists, and industry professionals working with language processing and understanding technologies.        </div>
