--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
             <p>the main meetup event</p>
           </div>
         </div>
-      
+        <div class="product-info__mobcta">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSds-QkpbsdlcYjX2oAiJhkXej3b5BerKstOffT52E2Sk1Lbwg/viewform?usp=header" class="button--alternate">Register for the Next Event</a>
+        </div>
       </div>
 
 
