--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <div class="timeline">
         <h1 class="timeline-title">Zakharov.Day</h1>
         <p class="timeline-subtitle">
-          The meetup will take place on <b>March 13, 2025</b>, and kick off with two keynote presentations. 
+          The meetup will take place online on <b>March 13, 2025</b>, and kick off with two keynote presentations by Margarita Kirina (HSE) on emotions in digital literature research and Olga Mitrofanova (SPbU) on creating text corpora for corpus and computational linguistics. 
           Additionally, we invite you to submit proposals for 10-minute lightning talks focused on early-stage research.
         </p>
         <div class="timeline-details">
