--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--меню хедера-->
     <section class="site-header__actions">
       <nav class="site-nav">
-        <a href="#dates" class="site-nav__item"><span>Important Dates</span></a>
+        <a href="#dates" class="site-nav__item"><span>Upcoming Sub-event</span></a>
         <!--
         <a href="#prints" class="site-nav__item"><span>Our Journals</span></a>
         -->
