--- a/index.html
+++ b/index.html
@@ -150,6 +150,146 @@
   
   </section>
 
+ <section class="compling-program">
+  <div class="container">
+    <h2 class="compling-program__title">Program: Computational Linguistics Seminar</h2>
+    <div class="program-slider">
+
+      <div class="session-block active">
+        <h3 class="session-title">
+          <span class="session-nav prev">←</span>
+          Session 1 - Russian track
+          <span class="session-date-inline">(23 June, 10:00–11:30, Room 1222)</span>
+          <span class="session-nav next">→</span>
+        </h3>
+        <div class="talk-entry">
+          <div class="talk-topic">Геометрия падежей в векторных моделях русского языка</div>
+          <div class="talk-speaker">Кирилл Черников, Илья Суров</div>
+          <div class="talk-affiliation">Университет ИТМО</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Разработка системы анализа разноплановых характеристик поэтического текста</div>
+          <div class="talk-speaker">Арина Панкова, Елена Ягунова</div>
+          <div class="talk-affiliation">Санкт-Петербургский государственный университет</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Динамика тем научных статей в корпусе текстов по компьютерной и корпусной лингвистике</div>
+          <div class="talk-speaker">Ольга Митрофанова</div>
+          <div class="talk-affiliation">Санкт-Петербургский государственный университет</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Речевые тактики в ситуации конфликта в межличностном общении как составляющая языковой модели в системах искусственного интеллекта</div>
+          <div class="talk-speaker">Ольга Сытник</div>
+          <div class="talk-affiliation">Санкт-Петербургский горный университет императрицы Екатерины II</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Проблемы исследования словообразовательного потенциала с использованием современных поисковых систем</div>
+          <div class="talk-speaker">Елена Васильева</div>
+          <div class="talk-affiliation">Иркутский государственный университет</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Технологии векторного поиска при работе с цифровыми собраниями</div>
+          <div class="talk-speaker">Влада Погожельская</div>
+          <div class="talk-affiliation">Национальный исследовательский университет «Высшая школа экономики»</div>
+        </div>
+      </div>
+
+      <div class="session-block">
+        <h3 class="session-title">
+          <span class="session-nav prev">←</span>
+          Session 2 - Russian track
+          <span class="session-date-inline">(23 June, 11:45–13:15, Room 1222)</span>
+          <span class="session-nav next">→</span>
+        </h3>
+        <div class="talk-entry">
+          <div class="talk-topic">Использование алгоритмов машинного перевода в задаче субтитрирования образовательного видеоконтента</div>
+          <div class="talk-speaker">Екатерина Лаврентьева, Марина Коган</div>
+          <div class="talk-affiliation">Санкт-Петербургский политехнический университет Петра Великого</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Сравнение нейросетевых синтаксических анализаторов для русского языка</div>
+          <div class="talk-speaker">Елена Шамаева</div>
+          <div class="talk-affiliation">Московский государственный университет имени М. В. Ломоносова</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Оценка лингвистической компетенции больших языковых моделей</div>
+          <div class="talk-speaker">Ксения Студеникина, Екатерина Лютикова, Анастасия Герасимова</div>
+          <div class="talk-affiliation">Московский государственный университет имени М. В. Ломоносова</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Генерация фан-литературы на русском языке</div>
+          <div class="talk-speaker">Дарья Середина</div>
+          <div class="talk-affiliation">Национальный исследовательский университет «Высшая школа экономики»</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Сравнительный анализ методов настройки генеративных языковых моделей</div>
+          <div class="talk-speaker">Елизавета Сытикова, Мария Сергеева, Анастасия Колмогорова</div>
+          <div class="talk-affiliation">Национальный исследовательский университет «Высшая школа экономики»</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Большая языковая модель и человек рассматривают живопись</div>
+          <div class="talk-speaker">Полина Налобина, Анастасия Колмогорова</div>
+          <div class="talk-affiliation">Национальный исследовательский университет «Высшая школа экономики»</div>
+        </div>
+        <div class="talk-entry">
+          <div class="talk-topic">Эмоции и темы публичного дискурса об ИИ</div>
+          <div class="talk-speaker">Анна Чижик</div>
+          <div class="talk-affiliation">Университет ИТМО</div>
+        </div>
+      </div>
+
+      <div class="session-block">
+  <h3 class="session-title">
+    <span class="session-nav prev">←</span>
+    Session 1 - English track
+    <span class="session-date-inline">(24 June, 10:00–11:30, Room 1222)</span>
+    <span class="session-nav next">→</span>
+  </h3>
+  <div class="talk-entry"><div class="talk-topic">TL;DR: Text Normalization for Social Media Corpus</div><div class="talk-speaker">Grigorii Feoktistov, Dmitry Morozov</div><div class="talk-affiliation">Novosibirsk State University, Russian National Corpus</div></div>
+  <div class="talk-entry"><div class="talk-topic">Russian Neural Morpheme Segmentation: From Lemmata to Wordforms</div><div class="talk-speaker">Dmitry Morozov, Olga Shcherbakova, Anna Glazkova</div><div class="talk-affiliation">Novosibirsk State University, University of Tyumen, Russian National Corpus</div></div>
+  <div class="talk-entry"><div class="talk-topic">An Experimental Study of Automating Explanatory Dictionary Compilation with Language Models</div><div class="talk-speaker">Timur Garipov, Dmitry Morozov, Yana Gubarkova, Anastasia Kozerenko, Anna Glazkova</div><div class="talk-affiliation">Novosibirsk State University, Yandex LLC, V.V. Vinogradov Russian Language Institute RAS, University of Tyumen, Russian National Corpus</div></div>
+  <div class="talk-entry"><div class="talk-topic">Word Sense Disambiguation in Russian: A Generative LLM Approach</div><div class="talk-speaker">Polina Gousyatskaya, Natalia Loukachevitch</div><div class="talk-affiliation">Lomonosov Moscow State University</div></div>
+  <div class="talk-entry"><div class="talk-topic">Modelling Arabic Toponym Transliteration into English and Russian</div><div class="talk-speaker">Sofia Shevtsovа</div><div class="talk-affiliation">National Research University Higher School of Economics</div></div>
+</div>
+
+<div class="session-block">
+  <h3 class="session-title">
+    <span class="session-nav prev">←</span>
+    Session 2 - English track
+    <span class="session-date-inline">(24 June, 12:00–13:30, Room 1222)</span>
+    <span class="session-nav next">→</span>
+  </h3>
+  <div class="talk-entry"><div class="talk-topic">Mapping Effective Teaching with Topic Modeling</div><div class="talk-speaker">Ivan Mamaev</div><div class="talk-affiliation">Saint Petersburg State University, Baltic State Technical University “Voenmeh” named after D.F. Ustinov</div></div>
+  <div class="talk-entry"><div class="talk-topic">What Officials Talk About? Uncovering Themes and Trends in Interviews with Russian Officials Through Topic Modeling</div><div class="talk-speaker">Sofiia Chepovetskaia</div><div class="talk-affiliation">National Research University Higher School of Economics, Saint-Petersburg State University</div></div>
+  <div class="talk-entry"><div class="talk-topic">Profiling the corpus of tutor advertising texts: a statistical and linguistic analysis</div><div class="talk-speaker">Nadezhda Ogorodova</div><div class="talk-affiliation">Baltic State Technical University “VOENMEH” named after D.F. Ustinov</div></div>
+  <div class="talk-entry"><div class="talk-topic">Creating a dataset for automatic detection of vague expressions in Russian legal texts</div><div class="talk-speaker">Olga Blinova, Alyona Berlin</div><div class="talk-affiliation">National Research University Higher School of Economics, Saint-Petersburg State University</div></div>
+  <div class="talk-entry"><div class="talk-topic">Five-Minute Reads: Exploring the Factors that Influence Automatic Summarization of Literary Texts</div><div class="talk-speaker">Alisa Lukyanchikova, Margarita Kirina</div><div class="talk-affiliation">National Research University Higher School of Economics</div></div>
+  <div class="talk-entry"><div class="talk-topic">The Influence of Language Typological Features on Neural Summarization Performance</div><div class="talk-speaker">Mark Athugodage, Olga Mitrofanova</div><div class="talk-affiliation">National Research University Higher School of Economics, Saint-Petersburg State University</div></div>
+</div>
+
+<div class="session-block">
+  <h3 class="session-title">
+    <span class="session-nav prev">←</span>
+    Session 3 - English track
+    <span class="session-date-inline">(24 June, 14:30–16:00, Room 1222)</span>
+    <span class="session-nav next">→</span>
+  </h3>
+  <div class="talk-entry"><div class="talk-topic">Optimising Terminology Processing in Unmanned Aviation: a New Approach to Term Extraction Using Prompt Engineering</div><div class="talk-speaker">Ekaterina Isaeva, Behruz Safarbekov</div><div class="talk-affiliation">Perm State University, National University of Science and Technology MISiS</div></div>
+  <div class="talk-entry"><div class="talk-topic">Dialog Flow Analytics Toolkit for a Contact Center Platform</div><div class="talk-speaker">Alena Zhivotova, Valeria Zarembo</div><div class="talk-affiliation">Erllecta LLC</div></div>
+  <div class="talk-entry"><div class="talk-topic">Measuring Public Satisfaction with Service Quality: customer-oriented approach</div><div class="talk-speaker">Svetlana Sheremetyeva, Olga Babina, Andrew Polev</div><div class="talk-affiliation">South Ural State University</div></div>
+  <div class="talk-entry"><div class="talk-topic">Emotion-Sentiment Profiling of Customer Feedback through Cluster-Driven Analysis</div><div class="talk-speaker">Olga Babina, Svetlana Sheremetyeva</div><div class="talk-affiliation">South Ural State University</div></div>
+  <div class="talk-entry"><div class="talk-topic">Do LLMs Understand Why We Write Diaries? A Method for Purpose Extraction and Clustering</div><div class="talk-speaker">Valeriya Goloviznina, Alexander Sergeev, Mikhail Melnichenko, Evgeny Kotelnikov</div><div class="talk-affiliation">European University at Saint Petersburg</div></div>
+</div>
+
+
+      <span class="session-nav prev">←</span><span class="session-nav next">→</span>
+     
+    </div>
+  </div>
+</section>
+
+
+
 
   <section class="mid-landing">
     <!--
