--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <h3 class="session-title">
           <span class="session-nav prev">←</span>
           Session 1 - Russian track
-          <span class="session-date-inline">(23 June, 10:00–11:30, Room 1222)</span>
+          <span class="session-date-inline">(23 June, 12:30-14.00, Room 1222)</span>
           <span class="session-nav next">→</span>
         </h3>
         <div class="talk-entry">
@@ -201,7 +201,7 @@
         <h3 class="session-title">
           <span class="session-nav prev">←</span>
           Session 2 - Russian track
-          <span class="session-date-inline">(23 June, 11:45–13:15, Room 1222)</span>
+          <span class="session-date-inline">(23 June, 15:00-17.00, Room 1222)</span>
           <span class="session-nav next">→</span>
         </h3>
         <div class="talk-entry">
