--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     .section{
       background:#fff;
       color:#111;
-      padding: 64px var(--pad);
+      padding: 34px var(--pad);
       margin-left: var(--railW);
       overflow-x: clip;
     }
@@ -394,6 +394,8 @@ a.link-pill:active{ opacity:.92; }
       letter-spacing:.2px;
       color: #2bbf3b;
     }
+    
+
     .timeline-subtitle{
       margin: 12px 0 0;
       color:#333;
@@ -452,6 +454,7 @@ a.link-pill:active{ opacity:.92; }
       .section__inner{
         grid-template-columns: 1fr;
         gap: 26px;
+        
       }
       .timeline-title{ font-size: 34px; }
     }
@@ -600,6 +603,15 @@ a.link-pill:active{ opacity:.92; }
       color: #2CA02C;
       font-weight: 900;
       font-size: 22px;
+    }
+    @media (max-width: 520px){
+      .section__inner > div{
+        padding-right: 8px;
+      }
+
+      .timeline{
+        padding-right: 20px; /* чуть больше, т.к. это карточка */
+      }
     }
   </style>
 </head>
